--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,15 @@
-vendor/
+/vendor/
 **/*.log
 **/*.sqlite
 .idea/
-bin/
-tmp/
-node_modules/
-.sass-cache/
+/bin/
+/tmp/
+/node_modules/
+/.sass-cache/
 *-packr.go
-public/assets/
+/public/assets/
 honcheonui
 .vscode/
 .grifter/
 .env
+database.yml
