register provider with provider plugin

--- a/.env.dist
+++ b/.env.dist
@@ -4,6 +4,7 @@
 # application by using os.Getenv("KEY").
 
 HCU_URL=http://www.example.com
+HCU_HOME=/opt/hyeoncheon/honcheonui
 
 UART_URL=http://uart.example.com
 UART_KEY=Z7gkioF7pU<...>zNczsq42E2
