--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "awesome-bootstrap-checkbox": "^1.0.1",
     "babel-cli": "~6.26.0",
     "babel-core": "~6.26.0",
     "babel-loader": "~7.1.2",
