--- a/package.json
+++ b/package.json
@@ -3,32 +3,45 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "dev": "webpack --watch",
+    "build": "webpack --mode production --progress"
+  },
+  "repository": "github.com/gobuffalo/buffalo",
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.12.0",
+    "@popperjs/core": "^2.0.0",
     "awesome-bootstrap-checkbox": "^1.0.1",
-    "babel-cli": "~6.26.0",
-    "babel-core": "~6.26.0",
-    "babel-loader": "~7.1.2",
-    "babel-preset-env": "~1.5.2",
-    "bootstrap-sass": "~3.3.7",
-    "clean-webpack-plugin": "~0.1.17",
-    "copy-webpack-plugin": "~4.0.1",
-    "css-loader": "~0.28.4",
-    "expose-loader": "~0.7.3",
-    "extract-text-webpack-plugin": "3.0.2",
-    "file-loader": "~1.1.6",
-    "font-awesome": "~4.7.0",
+    "bootstrap": "^5.0.0",
+    "easymde": "^2.15.0",
+    "highlight.js": "^11.2.0",
+    "jquery": "^3.6.0",
+    "jquery-ujs": "^1.2.2",
+    "moment": "^2.29.1"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.0.0",
+    "@babel/core": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "autoprefixer": "^9.7.6",
+    "babel-loader": "^8.1.0",
+    "copy-webpack-plugin": "~6.4.1",
+    "css-loader": "~3.5.1",
+    "expose-loader": "^3.0.0",
+    "file-loader": "^6.0.0",
     "gopherjs-loader": "^0.0.1",
-    "jquery": "~3.2.1",
-    "jquery-ujs": "~1.2.2",
-    "moment": "^2.22.0",
-    "node-sass": "~4.7.2",
+    "mini-css-extract-plugin": "^2.0.0",
     "npm-install-webpack-plugin": "4.0.5",
-    "path": "~0.12.7",
-    "sass-loader": "~6.0.6",
-    "style-loader": "~0.20.1",
-    "uglifyjs-webpack-plugin": "~0.4.6",
-    "url-loader": "~0.6.2",
-    "webpack": "~3.10.0",
-    "webpack-manifest-plugin": "~1.2.1"
+    "postcss-loader": "^3.0.0",
+    "sass": "^1.0.0",
+    "sass-loader": "~10.2.0",
+    "style-loader": "~1.1.3",
+    "terser-webpack-plugin": "~2.3.1",
+    "url-loader": "~4.1.0",
+    "webpack": "~5.58.0",
+    "webpack-clean-obsolete-chunks": "^0.4.0",
+    "webpack-cli": "^4.0.0",
+    "webpack-livereload-plugin": "^3.0.0",
+    "webpack-manifest-plugin": "^4.0.0"
   }
 }
