updated codeclimate configuration

--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -1,6 +1,17 @@
-engines:
+version: "2"
+checks:
+  method-lines:
+    config:
+      threshold: 60
+plugins:
   fixme:
     enabled: true
+    config:
+      strings:
+        - FIXME
+        - BUG
+        - HACK
+        - XXX
   gofmt:
     enabled: true
   golint:
@@ -8,13 +19,12 @@ engines:
   govet:
     enabled: true
 exclude_paths:
-  - grifts/**/*
   - "**/*_test.go"
   - "*_test.go"
   - "**_test.go"
+  - docs/*
+  - grifts/**/*
   - logs/*
   - public/*
   - templates/*
-ratings:
-  paths:
-    - "**.go"
+  - assets/vendor/**
